# wro-2019-robotServer

./: .gitmodules  CMakeLists.txt  Humans.hpp  NeuralNet.hpp  Stereo.hpp  dataProcessing.hpp  faces.csv  main.cpp  main.cpp.bak  speechParser.hpp  thingworx.hpp  utils.hpp  videoProcessing.hpp
data/: extrinsics.yml  intrinsics.yml  model.yml
data/samples/: fake.csv  real.csv
modules/: Filter.h
